# sam

./: .clang-format  .gitignore  meson.build
avr/: config.h  interactive_tx.c  lcd.c  lcd.h  meson.build  toolchain.ini
docs/: protocol.md
include/: bits.h  frame.h  rx.h  tx.h
src/: bits.c  meson.build  rx.c  tx.c
tests/: meson.build  test_bits.cc  test_rx.cc  test_tx.cc
